# py3dgame

./: .pylintrc  .readthedocs.yaml  LICENSE  README.md  setup.py
.github/workflows/: autotesting.yaml  release.yaml
docs/source/: conf.py  index.rst  py3dgame.rst  requirements.txt
examples/: coin.py  cube.py  logo.py
lib/: CMakeLists.txt  ext_rendering.c  rendering.cpp
profiling/: profile_rendering.py
py3dgame/: __init__.py  body.py  color.py  math3d.py  rendering.py  scene.py  vec.py
tests/: test_math3d.py  test_vec.py
